--- a/src/components/Tweets.css
+++ b/src/components/Tweets.css
@@ -8,7 +8,6 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  position:relative;
 }
 
 .Tweet_UserAvatar {
